# autotools-cargo-example

./: LICENSE  Makefile.am  README.md  configure.ac
src/c/: main.c
src/rust/: Cargo.toml
src/rust/src/: lib.rs
